--- a/Tarmonia/FAQ.html
+++ b/Tarmonia/FAQ.html
@@ -2,7 +2,7 @@
 <html lang="en-US" class="scheme_original">
 
 <head>
-    <title>FAQ &#8211; Tarmonia</title>
+    <title>FAQ &#8211; Dairy Farm</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="format-detection" content="telephone=no">
@@ -90,23 +90,7 @@
                                         <div class="widget woocommerce widget_shopping_cart">
                                             <div class="hide_cart_widget_if_empty">
                                                 <div class="widget_shopping_cart_content">
-                                                    <div class="cart-header">
-                                                        <h3>Shopping Cart</h3>
-                                                        <span class="cart-count">0</span>
-                                                    </div>
-                                                    <div class="cart-body">
-                                                        <p class="woocommerce-mini-cart__empty-message">No products in the cart.</p>
-                                                    </div>
-                                                    <div class="cart-footer">
-                                                        <div class="cart-total">
-                                                            <span class="total-label">Total:</span>
-                                                            <span class="total-amount">$0.00</span>
-                                                        </div>
-                                                        <div class="cart-buttons">
-                                                            <a href="cart.html" class="view-cart-button">View Cart</a>
-                                                            <a href="checkout.html" class="checkout-button">Checkout</a>
-                                                        </div>
-                                                    </div>
+                                                    <p class="woocommerce-mini-cart__empty-message">No products in the cart.</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -319,7 +303,7 @@
                                     <li class="menu-item"><a href="recipes.html">Meet the Cows</a></li>
                                     <li class="menu-item"><a href="cobbles.html">Famous Dairy Facts</a></li>
                                     <li class="menu-item"><a href="grid.html">From the Farm to the Fridge</a></li>
-                                    <li class="menu-item"><a href="contacts.html">Tarmonia Map</a></li>
+                                    <li class="menu-item"><a href="contacts.html">Dairy Farm Map</a></li>
                                     <li class="menu-item"><a href="classic.html">Farm Practices</a></li>
                                 </ul>
                             </div>
@@ -421,7 +405,7 @@
                     </ul>
                     <div class="copyright_text">
                         <p>2025 Tarmonia
-                            <a href="tnc.html">Terms of Use</a> and
+                            <a href="http://ancorathemes.com/about/">Terms of Use</a> and
                             <a href="http://ancorathemes.com/about/">Privacy Policy</a>
                         </p>
                     </div>
@@ -452,6 +436,9 @@
 <script type='text/javascript' src='js/vendor/ui/tabs.min.js'></script>
 <script type='text/javascript' src='js/vendor/isotope.pkgd.min.js'></script>
 <script type='text/javascript' src='js/custom/faq.js'></script>
+
+<!-- Global cart script -->
+<script type='text/javascript' src='js/local-cart.js'></script>
 
 </body>
 
