--- a/Tarmonia/about-2.html
+++ b/Tarmonia/about-2.html
@@ -2,7 +2,7 @@
 <html lang="en-US" class="scheme_original">
 
 <head>
-    <title>About Us &#8211; Tarmonia</title>
+    <title>About Us &#8211; Dairy Farm</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="format-detection" content="telephone=no">
@@ -69,7 +69,7 @@
                             <div class="column-4_5 contact_logo">
                                 <div class="logo">
                                     <a href="index.html">
-                                        <img src="images/Tarmonia-Sustaining-Lives.png" class="logo_main" alt="" width="239" height="59">
+                                        <img src="images/tarmonia-new-tag.png" class="logo_main" alt="" width="239" height="59">
                                     </a>
                                 </div>
                             </div>
@@ -87,23 +87,7 @@
                                         <div class="widget woocommerce widget_shopping_cart">
                                             <div class="hide_cart_widget_if_empty">
                                                 <div class="widget_shopping_cart_content">
-                                                    <div class="cart-header">
-                                                        <h3>Shopping Cart</h3>
-                                                        <span class="cart-count">0</span>
-                                                    </div>
-                                                    <div class="cart-body">
-                                                        <p class="woocommerce-mini-cart__empty-message">No products in the cart.</p>
-                                                    </div>
-                                                    <div class="cart-footer">
-                                                        <div class="cart-total">
-                                                            <span class="total-label">Total:</span>
-                                                            <span class="total-amount">$0.00</span>
-                                                        </div>
-                                                        <div class="cart-buttons">
-                                                            <a href="cart.html" class="view-cart-button">View Cart</a>
-                                                            <a href="checkout.html" class="checkout-button">Checkout</a>
-                                                        </div>
-                                                    </div>
+                                                    <p class="woocommerce-mini-cart__empty-message">No products in the cart.</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -162,14 +146,14 @@
         </div>
         <div class="top_panel_title top_panel_style_1  title_present breadcrumbs_present scheme_original">
             <div  class="bg_cust_2 top_panel_title_inner top_panel_inner_style_1  title_present_inner breadcrumbs_present_inner">
-                <div class="content_wrap">
+                <!-- <div class="content_wrap">
                     <h1 class="page_title">About Us</h1>
                     <div class="breadcrumbs">
                         <a class="breadcrumbs_item home" href="index.html">Home</a>
                         <span class="breadcrumbs_delimiter"></span>
                         <span class="breadcrumbs_item current">About Us</span>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
         <div class="page_content_wrap page_paddings_no">
@@ -483,19 +467,19 @@
                                                                     <div class="post_item post_item_classic post_item_classic_3 post_format_standard odd">
                                                                         <div class="post_featured">
                                                                             <div class="post_thumb" data-image="images/post-6.jpg" data-title="It Was Delicious">
-                                                                                <a class="hover_icon hover_icon_link" href="single-post.html">
-                                                                                    <img alt="It Was Delicious" src="images/Untitled-design-5.webp">
+                                                                                <a class="hover_icon hover_icon_link" href="single-post.html?content=5">
+                                                                                    <img alt="" src="images/Untitled-design-5.webp">
                                                                                 </a>
                                                                             </div>
                                                                         </div>
                                                                         <div class="post_content isotope_item_content">
                                                                             <div class="post_info">
                                                                                 <span class="post_info_item post_info_posted">
-                                                                                    <a href="single-post.html" class="post_info_date">August 23, 2016</a>
+                                                                                    <a href="single-post.html?content=5" class="post_info_date">August 23, 2016</a>
                                                                                 </span>
                                                                             </div>
                                                                             <h4 class="post_title">
-                                                                                <a href="single-post.html">It Was Delicious</a>
+                                                                                <a href="single-post.html?content=5">It Was Delicious</a>
                                                                             </h4>
                                                                             <div class="post_descr">
                                                                                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vestibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta.</p>
@@ -505,10 +489,10 @@
                                                                                     <a href="classic.html" class="post_info_author">Philip James</a>
                                                                                 </span>
                                                                                 <span class="post_info_item post_info_counters">
-                                                                                    <a class="post_counters_item post_counters_views icon-eye-1" title="Views - 272" href="single-post.html">
+                                                                                    <a class="post_counters_item post_counters_views icon-eye-1" title="Views" href="single-post.html?content=5">
                                                                                         <span class="post_counters_number">272</span>
                                                                                     </a>
-                                                                                    <a class="post_counters_item post_counters_comments icon-comment-1" title="Comments - 0" href="single-post.html#respond">
+                                                                                    <a class="post_counters_item post_counters_comments icon-comment-1" title="Comments" href="single-post.html?content=5">
                                                                                         <span class="post_counters_number">0</span>
                                                                                     </a>
                                                                                 </span>
@@ -520,19 +504,19 @@
                                                                     <div class="post_item post_item_classic post_item_classic_3 post_format_standard even">
                                                                         <div class="post_featured">
                                                                             <div class="post_thumb" data-image="images/post-5.jpg" data-title="A Better Cream Life">
-                                                                                <a class="hover_icon hover_icon_link" href="single-post.html">
-                                                                                    <img alt="A Better Cream Life" src="images/picking-strawberries.jpg">
+                                                                                <a class="hover_icon hover_icon_link" href="single-post.html?content=6">
+                                                                                    <img alt="" src="images/picking-strawberries.jpg">
                                                                                 </a>
                                                                             </div>
                                                                         </div>
                                                                         <div class="post_content isotope_item_content">
                                                                             <div class="post_info">
                                                                                 <span class="post_info_item post_info_posted">
-                                                                                    <a href="single-post.html" class="post_info_date">August 14, 2016</a>
+                                                                                    <a href="single-post.html?content=6" class="post_info_date">August 14, 2016</a>
                                                                                 </span>
                                                                             </div>
                                                                             <h4 class="post_title">
-                                                                                <a href="single-post.html">A Better Cream Life</a>
+                                                                                <a href="single-post.html?content=6">A Better Cream Life</a>
                                                                             </h4>
                                                                             <div class="post_descr">
                                                                                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vestibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta.</p>
@@ -542,10 +526,10 @@
                                                                                     <a href="classic.html" class="post_info_author">Philip James</a>
                                                                                 </span>
                                                                                 <span class="post_info_item post_info_counters">
-                                                                                    <a class="post_counters_item post_counters_views icon-eye-1" title="Views - 263" href="single-post.html">
+                                                                                    <a class="post_counters_item post_counters_views icon-eye-1" title="Views" href="single-post.html?content=6">
                                                                                         <span class="post_counters_number">263</span>
                                                                                     </a>
-                                                                                    <a class="post_counters_item post_counters_comments icon-comment-1" title="Comments - 0" href="single-post.html#respond">
+                                                                                    <a class="post_counters_item post_counters_comments icon-comment-1" title="Comments" href="single-post.html?content=6">
                                                                                         <span class="post_counters_number">0</span>
                                                                                     </a>
                                                                                 </span>
@@ -557,19 +541,19 @@
                                                                     <div class="post_item post_item_classic post_item_classic_3 post_format_standard odd last">
                                                                         <div class="post_featured">
                                                                             <div class="post_thumb" data-image="images/2000x1600.png" data-title="Butter of a Dream">
-                                                                                <a class="hover_icon hover_icon_link" href="single-post.html">
-                                                                                    <img alt="Butter of a Dream" src="images/fishing.jpg">
+                                                                                <a class="hover_icon hover_icon_link" href="single-post.html?content=7">
+                                                                                    <img alt="" src="images/fishing.jpg">
                                                                                 </a>
                                                                             </div>
                                                                         </div>
                                                                         <div class="post_content isotope_item_content">
                                                                             <div class="post_info">
                                                                                 <span class="post_info_item post_info_posted">
-                                                                                    <a href="single-post.html" class="post_info_date">August 5, 2016</a>
+                                                                                    <a href="single-post.html?content=7" class="post_info_date">August 5, 2016</a>
                                                                                 </span>
                                                                             </div>
                                                                             <h4 class="post_title">
-                                                                                <a href="single-post.html">Butter of a Dream</a>
+                                                                                <a href="single-post.html?content=7">Butter of a Dream</a>
                                                                             </h4>
                                                                             <div class="post_descr">
                                                                                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vestibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta.</p>
@@ -579,10 +563,10 @@
                                                                                     <a href="classic.html" class="post_info_author">Philip James</a>
                                                                                 </span>
                                                                                 <span class="post_info_item post_info_counters">
-                                                                                    <a class="post_counters_item post_counters_views icon-eye-1" title="Views - 265" href="single-post.html">
+                                                                                    <a class="post_counters_item post_counters_views icon-eye-1" title="Views" href="single-post.html?content=7">
                                                                                         <span class="post_counters_number">265</span>
                                                                                     </a>
-                                                                                    <a class="post_counters_item post_counters_comments icon-comment-1" title="Comments - 0" href="single-post.html#respond">
+                                                                                    <a class="post_counters_item post_counters_comments icon-comment-1" title="Comments" href="single-post.html?content=7">
                                                                                         <span class="post_counters_number">0</span>
                                                                                     </a>
                                                                                 </span>
@@ -629,7 +613,7 @@
                                     <li class="menu-item"><a href="recipes.html">Meet the Cows</a></li>
                                     <li class="menu-item"><a href="cobbles.html">Famous Dairy Facts</a></li>
                                     <li class="menu-item"><a href="grid.html">From the Farm to the Fridge</a></li>
-                                    <li class="menu-item"><a href="contacts.html">Tarmonia Map</a></li>
+                                    <li class="menu-item"><a href="contacts.html">Dairy Farm Map</a></li>
                                     <li class="menu-item"><a href="classic.html">Farm Practices</a></li>
                                 </ul>
                             </div>
@@ -731,7 +715,7 @@
                     </ul>
                     <div class="copyright_text">
                         <p>2025 Tarmonia
-                            <a href="tnc.html">Terms of Use</a> and
+                            <a href="http://ancorathemes.com/about/">Terms of Use</a> and
                             <a href="http://ancorathemes.com/about/">Privacy Policy</a>
                         </p>
                     </div>
