--- a/Tarmonia/classic.html
+++ b/Tarmonia/classic.html
@@ -2,7 +2,7 @@
 <html lang="en-US" class="scheme_original">
 
 <head>
-    <title>Classic &#8211; Tarmonia</title>
+    <title>Classic &#8211; Dairy Farm</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="format-detection" content="telephone=no">
@@ -89,7 +89,7 @@
                             <div class="column-4_5 contact_logo">
                                 <div class="logo">
                                     <a href="index.html">
-                                        <img src="images/Tarmonia-Sustaining-Lives.png" class="logo_main" alt="" width="239" height="59">
+                                        <img src="images/tarmonia-new-tag.png" class="logo_main" alt="" width="239" height="59">
                                     </a>
                                 </div>
                             </div>
@@ -107,23 +107,7 @@
                                         <div class="widget woocommerce widget_shopping_cart">
                                             <div class="hide_cart_widget_if_empty">
                                                 <div class="widget_shopping_cart_content">
-                                                    <div class="cart-header">
-                                                        <h3>Shopping Cart</h3>
-                                                        <span class="cart-count">0</span>
-                                                    </div>
-                                                    <div class="cart-body">
-                                                        <p class="woocommerce-mini-cart__empty-message">No products in the cart.</p>
-                                                    </div>
-                                                    <div class="cart-footer">
-                                                        <div class="cart-total">
-                                                            <span class="total-label">Total:</span>
-                                                            <span class="total-amount">$0.00</span>
-                                                        </div>
-                                                        <div class="cart-buttons">
-                                                            <a href="cart.html" class="view-cart-button">View Cart</a>
-                                                            <a href="checkout.html" class="checkout-button">Checkout</a>
-                                                        </div>
-                                                    </div>
+                                                    <p class="woocommerce-mini-cart__empty-message">No products in the cart.</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -181,177 +165,24 @@
         </div>
         <div class="top_panel_title top_panel_style_1 title_present breadcrumbs_present scheme_original">
             <div  class="bg_cust_4 top_panel_title_inner top_panel_inner_style_1 title_present_inner breadcrumbs_present_inner">
-                <div class="content_wrap">
+                <!-- <div class="content_wrap">
                     <h1 class="page_title">Blog</h1>
                     <div class="breadcrumbs">
                         <a class="breadcrumbs_item home" href="index.html">Home</a>
                         <span class="breadcrumbs_delimiter"></span>
                         <span class="breadcrumbs_item current">Blog</span>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
         <div class="page_content_wrap page_paddings_yes">
             <div class="content_wrap">
                 <div class="content">
-                    <article class="post_item post_item_excerpt post_featured_default post_format_standard odd post type-post format-standard has-post-thumbnail hentry">
-                        <h2 class="post_title">
-                            <a href="single-post.html?content=1">Dairy Nutrition and Profitability Optimization</a>
-                        </h2>
-                        <div class="post_featured">
-                            <div class="post_thumb" data-image="images/2000x1600.png" data-title="Dairy Nutrition and Profitability Optimization">
-                                <a class="hover_icon hover_icon_link" href="single-post.html?content=1">
-                                    <img alt="" src="images/Screenshot 2025-03-20 at 9.42.56 AM.png"></a>
-                            </div>
-                        </div>
-                        <div class="post_content clearfix">
-                            <div class="post_info">
-                                <span class="post_info_item post_info_posted">
-                                    <a href="single-post.html?content=1" class="post_info_date">September 28, 2016</a>
-                                </span>
-                                <span class="post_info_item icon-user-1 post_info_posted_by">
-                                    <a href="classic.html" class="post_info_author">Philip James</a>
-                                </span>
-                                <span class="post_info_item post_info_counters">
-                                    <a class="post_counters_item post_counters_views icon-eye-1" title="Views - 549" href="single-post.html?content=1">
-                                        <span class="post_counters_number">549</span>
-                                    </a>
-                                    <a class="post_counters_item post_counters_comments icon-comment-1" title="Comments - 3" href="single-post.html?content=1#respond">
-                                        <span class="post_counters_number">3</span>
-                                    </a>
-                                </span>
-                            </div>
-                            <div class="post_descr">
-                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod</p>
-                                <a href="single-post.html?content=1" class="sc_button sc_button_square sc_button_style_filled sc_button_size_large">Read more</a>
-                            </div>
-                        </div>
-                    </article>
-                    <article class="post_item post_item_excerpt post_featured_default post_format_video even post type-post format-video hentry post_format-post-format-video">
-                        <h2 class="post_title">
-                            <a href="single-post.html?content=2">Milk and Cheese Against Allergies</a>
-                        </h2>
-                        <div class="post_featured">
-                            <div class="sc_video_player">
-                                <div class="sc_video_frame sc_video_play_button hover_icon hover_icon_play" data-width="770" data-height="433" data-video="&lt;iframe class=&quot;video_frame&quot; src=&quot;https://player.vimeo.com/video/115747267?autoplay=1&quot; width=&quot;770&quot; height=&quot;433&quot; frameborder=&quot;0&quot; webkitAllowFullScreen=&quot;webkitAllowFullScreen&quot; mozallowfullscreen=&quot;mozallowfullscreen&quot; allowFullScreen=&quot;allowFullScreen&quot;&gt;&lt;/iframe&gt;">
-                                    <img alt="" src="images/Home-Slide-1-Cattle-2000x1400-1.webp">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="post_content clearfix">
-                            <div class="post_info">
-                                <span class="post_info_item post_info_posted">
-                                    <a href="single-post.html?content=2" class="post_info_date">September 20, 2016</a>
-                                </span>
-                                <span class="post_info_item icon-user-1 post_info_posted_by">
-                                    <a href="classic.html" class="post_info_author">Philip James</a>
-                                </span>
-                                <span class="post_info_item post_info_counters">
-                                    <a class="post_counters_item post_counters_views icon-eye-1" title="Views - 236" href="single-post.html?content=2">
-                                        <span class="post_counters_number">236</span>
-                                    </a>
-                                    <a class="post_counters_item post_counters_comments icon-comment-1" title="Comments - 0" href="single-post.html?content=2#respond">
-                                        <span class="post_counters_number">0</span>
-                                    </a>
-                                </span>
-                            </div>
-                            <div class="post_descr">
-                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod</p>
-                                <a href="single-post.html?content=2" class="sc_button sc_button_square sc_button_style_filled sc_button_size_large">Read more</a>
-                            </div>
-                        </div>
-                    </article>
-                    <article class="post_item post_item_excerpt post_featured_default post_format_gallery odd post type-post format-gallery hentry category-the-industrys-input post_format-post-format-gallery">
-                        <h2 class="post_title">
-                            <a href="single-post.html?content=3">The Butter Business Growth</a>
-                        </h2>
-                        <div class="post_featured">
-                            <div id="sc_slider_363" class="sc_slider sc_slider_swiper swiper-slider-container sc_slider_nocontrols sc_slider_pagination" data-old-width="770" data-old-height="434" data-interval="7854">
-                                <div class="slides swiper-wrapper">
-                                    <div class="swiper-slide sw_1">
-                                        <a href="single-post.html?content=3"></a>
-                                    </div>
-                                    <div class="swiper-slide sw_2">
-                                        <a href="single-post.html?content=3"></a>
-                                    </div>
-                                    <div class="swiper-slide sw_3">
-                                        <a href="single-post.html?content=3"></a>
-                                    </div>
-                                </div>
-                                <div class="sc_slider_controls_wrap">
-                                    <a class="sc_slider_prev" href="#"></a>
-                                    <a class="sc_slider_next" href="#"></a>
-                                </div>
-                                <div class="sc_slider_pagination_wrap"></div>
-                            </div>
-                        </div>
-                        <div class="post_content clearfix">
-                            <div class="post_info">
-                                <span class="post_info_item post_info_posted">
-                                    <a href="single-post.html?content=3" class="post_info_date">September 11, 2016</a>
-                                </span>
-                                <span class="post_info_item icon-user-1 post_info_posted_by">
-                                    <a href="classic.html" class="post_info_author">Philip James</a>
-                                </span>
-                                <span class="post_info_item post_info_counters">
-                                    <a class="post_counters_item post_counters_views icon-eye-1" title="Views - 210" href="single-post.html?content=3">
-                                        <span class="post_counters_number">210</span>
-                                    </a>
-                                    <a class="post_counters_item post_counters_comments icon-comment-1" title="Comments - 0" href="single-post.html?content=3#respond">
-                                        <span class="post_counters_number">0</span>
-                                    </a>
-                                </span>
-                            </div>
-                            <div class="post_descr">
-                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod</p>
-                                <a href="single-post.html?content=3" class="sc_button sc_button_square sc_button_style_filled sc_button_size_large">Read more</a>
-                            </div>
-                        </div>
-                    </article>
-                    <article class="post_item post_item_excerpt post_featured_default post_format_audio even last post type-post format-audio hentry post_format-post-format-audio">
-                        <h2 class="post_title">
-                            <a href="single-post.html?content=4">Frozen Dairy Items on the Market</a>
-                        </h2>
-                        <div class="post_featured">
-                            <div class="sc_audio_player sc_audio sc_audio_info" data-width="" data-height="">
-                                <div class="sc_audio_header">
-                                    <div class="sc_audio_author">
-                                        <span class="sc_audio_author_name">Lily Hunter</span>
-                                    </div>
-                                    <h4 class="sc_audio_title">Insert Audio Title Here</h4>
-                                </div>
-                                <div class="__sc_audio_container">
-                                    <audio class="__sc_audio" src="images/sample-melody.mp3" data-title="Insert Audio Title Here" data-author="Lily Hunter"></audio>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="post_content clearfix">
-                            <div class="post_info">
-                                <span class="post_info_item post_info_posted">
-                                    <a href="single-post.html?content=4" class="post_info_date">September 6, 2016</a>
-                                </span>
-                                <span class="post_info_item icon-user-1 post_info_posted_by">
-                                    <a href="classic.html" class="post_info_author">Philip James</a>
-                                </span>
-                                <span class="post_info_item post_info_counters">
-                                    <a class="post_counters_item post_counters_views icon-eye-1" title="Views - 202" href="single-post.html?content=4">
-                                        <span class="post_counters_number">202</span>
-                                    </a>
-                                    <a class="post_counters_item post_counters_comments icon-comment-1" title="Comments - 0" href="single-post.html?content=4#respond">
-                                        <span class="post_counters_number">0</span>
-                                    </a>
-                                </span>
-                            </div>
-                            <div class="post_descr">
-                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod</p>
-                                <a href="single-post.html?content=4" class="sc_button sc_button_square sc_button_style_filled sc_button_size_large">Read more</a>
-                            </div>
-                        </div>
-                    </article>
+                    <div id="blog-list"></div>
                     <nav id="pagination" class="pagination_wrap pagination_pages">
-                        <span class="pager_current active ">1</span>
-                        <a href="#" class="">2</a>
-                        <a href="#" class="">3</a>
+                        <a href="classic.html?blog=1" class="pager_current active">1</a>
+                        <a href="classic.html?blog=2" class="">2</a>
+                        <a href="classic.html?blog=3" class="">3</a>
                         <a href="#" class="pager_dot ">&hellip;</a>
                         <a href="#" class="pager_next "></a>
                         <a href="#" class="pager_last "></a>
@@ -526,7 +357,7 @@
                                     <li class="menu-item"><a href="recipes.html">Meet the Cows</a></li>
                                     <li class="menu-item"><a href="cobbles.html">Famous Dairy Facts</a></li>
                                     <li class="menu-item"><a href="grid.html">From the Farm to the Fridge</a></li>
-                                    <li class="menu-item"><a href="contacts.html">Tarmonia Map</a></li>
+                                    <li class="menu-item"><a href="contacts.html">Dairy Farm Map</a></li>
                                     <li class="menu-item current-menu-item "><a href="classic.html">Farm Practices</a></li>
                                 </ul>
                             </div>
@@ -629,7 +460,7 @@
                     <div class="copyright_text">
                         <p>
                             2025 Tarmonia
-                            <a href="tnc.html">Terms of Use</a> and
+                            <a href="http://ancorathemes.com/about/">Terms of Use</a> and
                             <a href="http://ancorathemes.com/about/">Privacy Policy</a>
                         </p>
                     </div>
@@ -657,7 +488,7 @@
 <script type='text/javascript' src='js/custom/embed.min.js'></script>
 <script type='text/javascript' src='js/custom/shortcodes.js'></script>
 <script type='text/javascript' src='js/vendor/swiper/swiper.js'></script>
-<script type='text/javascript' src='js/single-posts.js'></script>
+<script type='text/javascript' src='js/blog.js'></script>
 <!-- Global cart script -->
 <script type='text/javascript' src='js/local-cart.js'></script>
 
