--- a/Tarmonia/single-post.html
+++ b/Tarmonia/single-post.html
@@ -2,7 +2,7 @@
 <html lang="en-US" class="scheme_original">
 
 <head>
-    <title>Dairy Nutrition and Profitability Optimization &#8211; Tarmonia</title>
+    <title>Dairy Farm</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="format-detection" content="telephone=no">
@@ -107,23 +107,7 @@
                                         <div class="widget woocommerce widget_shopping_cart">
                                             <div class="hide_cart_widget_if_empty">
                                                 <div class="widget_shopping_cart_content">
-                                                    <div class="cart-header">
-                                                        <h3>Shopping Cart</h3>
-                                                        <span class="cart-count">0</span>
-                                                    </div>
-                                                    <div class="cart-body">
-                                                        <p class="woocommerce-mini-cart__empty-message">No products in the cart.</p>
-                                                    </div>
-                                                    <div class="cart-footer">
-                                                        <div class="cart-total">
-                                                            <span class="total-label">Total:</span>
-                                                            <span class="total-amount">$0.00</span>
-                                                        </div>
-                                                        <div class="cart-buttons">
-                                                            <a href="cart.html" class="view-cart-button">View Cart</a>
-                                                            <a href="checkout.html" class="checkout-button">Checkout</a>
-                                                        </div>
-                                                    </div>
+                                                    <p class="woocommerce-mini-cart__empty-message">No products in the cart.</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -198,8 +182,8 @@
                 <div class="content">
                     <article class="post_item post_item_single post_featured_default post_format_standard post type-post format-standard has-post-thumbnail hentry">
                         <section class="post_featured">
-                            <div class="post_thumb" data-image="images/2000x1600.png" data-title="Dairy Nutrition and Profitability Optimization">
-                                <a class="hover_icon hover_icon_view" href="images/2000x1600.png" title="Dairy Nutrition and Profitability Optimization">
+                            <div class="post_thumb" data-image="images/2000x1600.png">
+                                <a class="hover_icon hover_icon_view" href="images/2000x1600.png" title="">
                                     <img alt="" src="images/2000x1400.png">
                                 </a>
                             </div>
@@ -207,17 +191,17 @@
                         <section class="post_content">
                             <div class="post_info">
                                 <span class="post_info_item post_info_posted">
-                                    <a href="single-post.html" class="post_info_date date updated" content="2016-09-28 08:44:54">Default Date</a>
+                                    <a href="single-post.html" class="post_info_date date updated" content="">Default Date</a>
                                 </span>
                                 <span class="post_info_item icon-user-1 post_info_posted_by vcard">
-                                    <a href="classic.html" class="post_info_author">Philip James</a>
+                                    <a href="classic.html" class="post_info_author"></a>
                                 </span>
                                 <span class="post_info_item post_info_counters">
-                                    <span class="post_counters_item post_counters_views icon-eye-1" title="Views - 551">
-                                        <span class="post_counters_number">551</span>
+                                    <span class="post_counters_item post_counters_views icon-eye-1" title="Views">
+                                        <span class="post_counters_number"></span>
                                     </span>
-                                    <a class="post_counters_item post_counters_comments icon-comment-1" title="Comments - 3" href="single-post.html#comments">
-                                        <span class="post_counters_number">3</span>
+                                    <a class="post_counters_item post_counters_comments icon-comment-1" title="Comments" href="single-post.html#comments">
+                                        <span class="post_counters_number"></span>
                                     </a>
                                 </span>
                             </div>
@@ -251,12 +235,12 @@
                                 </div>
                                 <span class="post_info_item post_info_cat">
                                     <span class="b-tag">Categories:</span>
-                                    <a class="category_link" href="#">Dairy Herd Management</a>
+                                    <a class="category_link" href="#"></a>
                                 </span>
                                 <span class="post_info_item post_info_tags">
                                     <span class="b-tag">Tags:</span>
-                                    <a class="post_tag_link" href="#">cheese</a>,
-                                    <a class="post_tag_link" href="#">organic</a>
+                                    <a class="post_tag_link" href="#"></a>,
+                                    <a class="post_tag_link" href="#"></a>
                                 </span>
                                 <br>
                             </div>
@@ -274,8 +258,7 @@
                                     <a href="classic.html" class="fn">Philip James</a>
                                 </span>
                             </h4>
-                            <div class="post_author_info">
-                                Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Ut tristique pretium tellus, sed fermentum est vestibulum id. </div>
+                            <div class="post_author_info" id="dynamic-authorinfo"></div>
                         </section>
                         <section class="related_wrap related_wrap_empty"></section>
                     </article>
@@ -559,7 +542,7 @@
                                     <li class="menu-item"><a href="recipes.html">Meet the Cows</a></li>
                                     <li class="menu-item"><a href="cobbles.html">Famous Dairy Facts</a></li>
                                     <li class="menu-item"><a href="grid.html">From the Farm to the Fridge</a></li>
-                                    <li class="menu-item"><a href="contacts.html">Tarmonia Map</a></li>
+                                    <li class="menu-item"><a href="contacts.html">Dairy Farm Map</a></li>
                                     <li class="menu-item current_page_parent "><a href="classic.html">Farm Practices</a></li>
                                 </ul>
                             </div>
@@ -660,7 +643,7 @@
                     <div class="copyright_text">
                         <p>
                             2025 Tarmonia
-                            <a href="tnc.html">Terms of Use</a> and
+                            <a href="http://ancorathemes.com/about/">Terms of Use</a> and
                             <a href="http://ancorathemes.com/about/">Privacy Policy</a>
                         </p>
                     </div>
@@ -690,7 +673,6 @@
 <script type='text/javascript' src='js/custom/shortcodes.js'></script>
 <script type='text/javascript' src='js/vendor/prettyPhoto/jquery.prettyPhoto.min.js'></script>
 <script type='text/javascript' src='js/single-posts.js'></script>
-
 <!-- Global cart script -->
 <script type='text/javascript' src='js/local-cart.js'></script>
 
