--- a/single-post.html
+++ b/single-post.html
@@ -104,6 +104,9 @@
                                         </span>
                                     </a>
                                     <a href="login.html" class="top_panel_login_button sc_button sc_button_style_filled sc_button_size_small" style="padding:6px 14px;">Login / Register</a>
+                                    <a href="#" class="user_icon_button" style="display:none;align-items:center;justify-content:center;width:34px;height:34px;border-radius:50%;background:#72b16a;color:#fff;font-size:15px;text-decoration:none;" title="User">
+                                        <span class="user_initial">U</span>
+                                    </a>
                                 </div>
                                 <ul class="widget_area sidebar_cart sidebar">
                                     <li>
@@ -678,6 +681,7 @@
 <script type='text/javascript' src='js/single-posts.js'></script>
 <!-- Global cart script -->
 <script type='text/javascript' src='js/local-cart.js'></script>
+<script type='text/javascript' src='js/auth-session.js'></script>
 
 </body>
 
