--- a/single-product.html
+++ b/single-product.html
@@ -87,6 +87,9 @@
                                         </span>
                                     </a>
                                     <a href="login.html" class="top_panel_login_button sc_button sc_button_style_filled sc_button_size_small" style="padding:6px 14px;">Login / Register</a>
+                                    <a href="#" class="user_icon_button" style="display:none;align-items:center;justify-content:center;width:34px;height:34px;border-radius:50%;background:#72b16a;color:#fff;font-size:15px;text-decoration:none;" title="User">
+                                        <span class="user_initial">U</span>
+                                    </a>
                                 </div>
                                 <ul class="widget_area sidebar_cart sidebar">
                                     <li>
@@ -592,6 +595,7 @@
 <script type='text/javascript' src='js/custom/util.min.js'></script>
 <script type='text/javascript' src='js/single-product.js'></script>
 <script type='text/javascript' src='js/local-cart.js'></script>
+<script type='text/javascript' src='js/auth-session.js'></script>
 <script>
     // Dynamically update the <title> tag based on product
     document.addEventListener('DOMContentLoaded', function () {
